split state enum into control and run
