# interface/server/openapi.yaml
@@ -332,7 +332,7 @@ components:
             type: number
         cycles:
           type: number
-        control:
+        control_state:
           type: string
           enum:
           - idle
@@ -340,6 +340,10 @@ components:
           - running
           - paused
           - uncontrolled
+        run_state:
+          type: string
+          enum:
+          - regular
           - jumping
           - wait_input
           - output_ready
